--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h6 {
 
 /*--------------------*/
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: 'Rubik', sans-serif;
   margin: 0 auto;
   background-color: #f5f5f5;
 }
@@ -130,11 +130,17 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+@media (max-width: 748px) {
+  .header {
+    padding: 0 20px;
+  }
 }
 
 .logo {
@@ -142,8 +148,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-decoration: none;
 }
 .logo img {
@@ -199,11 +205,17 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+@media (max-width: 748px) {
+  .preview {
+    padding: 110px 20px 60px;
+  }
 }
 
 .preview-container .preview-title {
@@ -222,8 +234,8 @@ body {
 .second-logo {
   display: inline-block;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 15px;
 }
 
@@ -250,11 +262,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   cursor: pointer;
   text-decoration: none;
   color: #161513;
@@ -284,14 +296,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 60px 120px;
   gap: 40px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 748px) {
   .about-container {
-    padding: 60px;
+    padding: 60px 20px;
   }
 }
 
@@ -329,8 +341,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   padding-bottom: 15px;
   font-style: normal;
   font-weight: 400;
@@ -370,11 +382,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border: 2px solid #161513;
   border-radius: 0px;
   margin-bottom: 20px;
@@ -386,8 +398,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   gap: 10px;
 }
 
@@ -422,8 +434,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 60%;
   margin: 0 auto;
   margin-top: 40px;
@@ -472,6 +484,11 @@ body {
     padding: 60px;
   }
 }
+@media (max-width: 748px) {
+  .portfolio {
+    padding: 60px 20px;
+  }
+}
 .portfolio .portfolio-container {
   margin-top: 40px;
 }
@@ -480,25 +497,30 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 307px;
   gap: 40px;
   margin-bottom: 95px;
 }
+@media (max-width: 748px) {
+  .portfolio .portfolio-list__item {
+    height: 260px;
+  }
+}
 .portfolio .portfolio-list__item:nth-child(even) {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 .portfolio .portfolio-list__item:nth-child(even) .portfolio-info {
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .portfolio .portfolio-list__item .portfolio-info {
   height: 100%;
@@ -508,33 +530,34 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding: 20px 0;
 }
 .portfolio .portfolio-list__item .portfolio-img {
   width: 100%;
   height: 100%;
 }
+.portfolio .portfolio-list__item .portfolio-img a,
 .portfolio .portfolio-list__item .portfolio-img img {
   height: 100%;
   width: 100%;
 }
 .portfolio .portfolio-list__item p {
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 1.24;
   letter-spacing: 1.44px;
   color: #161513;
 }
 .portfolio .portfolio-list__item span {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.48px;
-  color: #161513;
+  color: #b114aa;
 }
 .portfolio .portfolio-list__item a {
   text-decoration: none;
@@ -542,11 +565,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #161513;
   width: 126px;
   height: 42px;
@@ -554,7 +577,7 @@ body {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-.portfolio .portfolio-list__item a:hover {
+.portfolio .portfolio-list__item .portfolio-info a:hover {
   background-color: #e73a3a;
   border-color: #e73a3a;
   color: white;
@@ -562,6 +585,7 @@ body {
 
 .footer {
   height: 220px;
+  min-width: 748px;
   background-color: #161513;
 }
 .footer .footer-container {
@@ -570,6 +594,12 @@ body {
   display: flex;
   height: 100%;
   padding: 20px 120px;
+}
+
+@media (max-width: 748px) {
+  .footer .footer-container {
+    padding: 20px 60px;
+  }
 }
 
 .disconnector-wite {
@@ -587,10 +617,10 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 .copy .copy-span {
   color: white;
@@ -602,13 +632,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 40px;
+  padding-left: 140px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 .contacts .contacts-link-type {
   margin-right: 10px;
@@ -623,8 +653,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 10px 0;
 }
 
@@ -634,6 +664,6 @@ body {
 .bi-telegram,
 .bi-github {
   color: azure;
-  padding-right: 2px;
+  padding-right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
